GH-58 : Changed getLast and getFirst with get(o) and get(1)